# bits

./: CMakeLists.txt  README.md
example/: main.cpp
include/: bits.h
src/: bits.cpp
